# ml-cicd-showcase

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  check_monitoring.sh  config.yaml  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements-monitoring.txt  requirements.txt  serve.py  setup.bat  setup.sh  train.py
.github/workflows/: ci.yml
data/knowledge_base/: sample_documents.md
docker/: docker-compose.yml
docs/: CHECKLIST.md  FILE_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  architecture.md
models/: cnn_mnist.pth  cnn_mnist_metadata.json
monitoring/: README.md  prometheus.yml
monitoring/grafana/dashboards/: ml-dashboard.json
monitoring/grafana/datasources/: datasource.yml
scripts/: benchmark.py  generate_traffic.py
src/: config.py
src/models/: base_model.py  cnn_classifier.py  rag_system.py
src/serving/: app.py
src/utils/: metrics.py
tests/: conftest.py  test_cnn.py  test_integration.py  test_local.py  test_monitoring.py  test_rag.py
